# fickling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py  unsafe.pickle
.github/: dependabot.yml
.github/workflows/: claude.yml  lint.yml  pip-audit.yml  release.yml  tests.yml
example/: README.md  a-file.pickle  backdoor.py  context_manager.py  fault_injection.py  hook_functions.py  hook_torch_function.py  identify_pytorch_file.py  inject_mobilenet.py  inject_pytorch.py  mobile.py  numpy_cve.py  numpy_poc.py  poc.py  pytorch_poc.py  torch_exp.py  torch_exp_one.py  torch_exp_two.py  trace_binary.py  unvetted_dependencies.py  vetted.py
fickling/: __init__.py  __main__.py  analysis.py  another.py  cli.py  cli_polyglot.py  cli_pytorch.py  constants.py  context.py  exception.py  fickle.py  hook.py  hook_check.py  import_hook.py  loader.py  ml.py  pickle.py  polyglot.py  pytorch.py  restricted_unpicklers.py  tracing.py
pickle_scanning_benchmark/: README.md  benchmark.py  dataset_stats.py  download.py  inject.py  listfiles.py  logger.py  requirements.txt
test/: _helpers.py  test_analysis.py  test_archive_scanning.py  test_attack_vectors.py  test_benign_edge_cases.py  test_bypasses.py  test_cli.py  test_cli_recursive.py  test_context.py  test_crashes.py  test_cve_patterns.py  test_expansion_attack_analysis.py  test_hook.py  test_loads_api.py  test_pickle.py  test_polyglot.py  test_pytorch.py  test_scan_api.py  test_scanner_deactivation_analysis.py  test_tracing.py  test_unpickler.py
test/fixtures/: generate_fixtures.py
