[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fickling"
dynamic = ["version"]
description = "A static analyzer and interpreter for Python pickle data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
dependencies = ["stdlib_list ~= 0.11.1"]
requires-python = ">=3.9"

[project.optional-dependencies]
torch = ["torch >= 2.1.0", "torchvision >= 0.16.1"]
lint = [
  "black",
  "mypy",
  "ruff==0.5.4",
  # for the Buffer ABC before Python 3.12
  "typing-extensions; python_version < '3.12'",
]
test = [
  "pytest",
  "pytest-cov",
  "coverage[toml]",
  "numpy==2.0.2",
  "torch >= 2.1.0",
  "torchvision >= 0.16.1",
]
dev = [
  "build",
  "fickling[lint,test]",
  "twine",
  "torch >= 2.1.0",
  "torchvision >= 0.16.1",
]
examples = ["numpy", "pytorchfi"]

[project.scripts]
"fickling" = "fickling.__main__:main"

[project.urls]
Homepage = "https://pypi.org/project/fickling"
Issues = "https://github.com/trailofbits/fickling/issues"
Source = "https://github.com/trailofbits/fickling"

[tool.black]
line-length = 100

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["fickling/__main__.py", "fickling/cli.py"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 140
lint.select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4"]

[tool.ruff.lint.per-file-ignores]
# Ignore 'line too long' for this file because it contains lots of text
"fickling/ml.py" = ["E501"]
"pickle_scanning_benchmark/*.py" = ["BLE", "E"]
